# weather-enrichment-service

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  tasks.py
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  city-api.service.ts  city.model.ts
